# HOMEWORK

./: .gitignore  README.md  student_name.txt
HW1/src/: hw1.cpp
UAV/first_pkg/: CMakeLists.txt
UAV/first_pkg/src/: test.cpp
UAV/forth_pkg/: package.xml
UAV/third_pkg/ncrl_chadlin/: CMakeLists.txt  package.xml
UAV/third_pkg/ncrl_mapping/: package.xml
UAV/third_pkg/ncrl_students_pkg/src/: tutorial_1.cpp
UAV/third_pkg/turtlebot3_description/urdf/: ncrl_waffle.urdf.xacro
UAV/third_pkg/velodyne_description/urdf/: VLP-16.urdf.xacro
UAV/third_pkg/velodyne_description/world/: loop_closure_3.world
catkin_ws/src/forth_pkg/: CMakeLists.txt
catkin_ws/src/forth_pkg/src/: rviz_tutorial.cpp
catkin_ws/src/second_pkg/launch/: turtle_setting.launch
catkin_ws/src/second_pkg/src/: tutorial_2.cpp
catkin_ws/src/third_pkg/ncrl_mapping/: CMakeLists.txt
catkin_ws/src/third_pkg/ncrl_mapping/launch/: ncrl_gazebo.launch
catkin_ws/src/third_pkg/ncrl_mapping/maps/: loop_closure_1.world
catkin_ws/src/third_pkg/ncrl_students_pkg/: CMakeLists.txt  package.xml
catkin_ws/src/third_pkg/velodyne_description/urdf/: example.urdf.xacro
catkin_ws/src/third_pkg/velodyne_description/world/: loop_closure_1.world  loop_closure_2.world  loop_closure_4.world
second_pkg/: CMakeLists.txt  package.xml
second_pkg/src/: tutorial_1.cpp  tutorial_3.cpp
third_pkg/turtlebot3_description/urdf/: turtlebot3_waffle.gazebo.xacro
week_1/src/: hw1.cpp
week_10/: CMakeLists.txt  package.xml
week_10/include/week_10/: kalman.h
week_10/src/: kalman.cpp  kf_test.cpp
week_11/: CMakeLists.txt  package.xml
week_11/src/: cere_solver_tutorial.cpp
week_3/: CMakeLists.txt  package.xml
week_3/include/week_3/: ncrl_tf.h
week_3/launch/: week_3.launch
week_3/src/: final_work.cpp  tf_ncrl.cpp
